# patternRecognition

./: CMakeLists.txt  CSVLoader.cpp  CSVLoader.hpp  findBestMatch.cpp  findBestMatch.hpp  first_experiment.cpp  main.cpp  searchTimeSeries.cpp  searchTimeSeries.hpp  second_experiment.cpp
